--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,16 +22,17 @@ Boostrap styles start
 
 /* Buttons */
 .btn-primary {
-  background-color: #E7DED8 !important;
+  background-color: #e7ded8 !important;
   color: #171412 !important;
   border-color: #e7ded8 !important;
 }
 
 .btn-accent {
   background-color: #bb6c54 !important;
-  color: #F6EDE7 !important;
+  color: #f6ede7 !important;
   border-color: #bb6c54 !important;
 }
+
 
 /*? Text */
 .text-dark {
@@ -44,6 +45,11 @@ Boostrap styles start
   color: #7b7774 !important;
 }
 
+/* Form Check */
+.form-check-input:checked {
+  background-color: #bb6c54 !important;
+  border-color: #bb6c54 !important;
+}
 /**************
 Boostrap styles end
 ***************/
