--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,54 +2,92 @@
   font-family: "Roboto", sans-serif;
 }
 
+:root{
+  --bg-main: #f8f9fa;
+  --bg-secondary: #212529;
+  --bg-tertiary: #e9ecef;
+  --text-white: #f8f9fa;
+  --text-white-2: #E9ECEF;
+  --text-white-3: #DEE2E6;
+  --text-white-4: #CED4DA;
+  --text-white-5: #adb5bd;
+  --text-dark: #212529;
+  --text-dark-2: #495057;
+  --text-dark-3: #343a40;
+  --text-dark-4: #6c757d;
+}
+
 /**************
 Boostrap styles start
 ***************/
 
 /*! Backgrounds */
-.bg-primary {
-  background-color: #e7ded8 !important;
-}
-
 .bg-main {
-  background-color: #f6ede7 !important;
+  background-color: #f8f9fa !important;
 }
 .bg-secondary {
-  background-color: #7b7774 !important;
+  background-color: #212529 !important;
 }
-.bg-accent {
-  background-color: #bb6c54 !important;
-}
-
-/* Buttons */
-.btn-primary {
-  background-color: #e7ded8 !important;
-  color: #171412 !important;
-  border-color: #e7ded8 !important;
+.bg-tertiary {
+  background-color: #e9ecef !important;
 }
 
-.btn-accent {
-  background-color: #bb6c54 !important;
-  color: #f6ede7 !important;
-  border-color: #bb6c54 !important;
+/*! Buttons */
+.btn-main {
+  background-color: #212529 !important;
+  color: #f8f9fa !important;
+  border: none;
 }
 
+.btn-secondary {
+  background-color: #e9ecef !important;
+  color: #212529 !important;
+  border: none;
+}
 
-/*? Text */
+.btn-tertiary {
+  border: 1px solid #212529 !important;
+  background-color: #f8f9fa !important;
+  color: #212529 !important;
+  border: none;
+}
+
+/*! Text */
+/** White */
+.text-white {
+  color: #f8f9fa !important;
+}
+.text-white-2 {
+  color: #E9ECEF !important;
+}
+.text-white-3 {
+  color: #DEE2E6 !important;
+}
+.text-white-4 {
+  color: #CED4DA !important;
+}
+.text-white-5 {
+  color: #adb5bd !important;
+}
+
+/** Dark */
 .text-dark {
-  color: #171412 !important;
+  color: #212529 !important;
 }
-.text-accent {
-  color: #bb6c54 !important;
+.text-dark-2 {
+  color: #343a40 !important;
 }
-.text-brown {
-  color: #7b7774 !important;
+.text-dark-3 {
+  color: #495057 !important;
+}
+.text-dark-4 {
+  color: #6c757d !important;
 }
 
 /* Form Check */
 .form-check-input:checked {
-  background-color: #bb6c54 !important;
-  border-color: #bb6c54 !important;
+  background-color: #212529 !important;
+  border-color: #212529 !important;
 }
 /**************
 Boostrap styles end
@@ -80,9 +118,4 @@ a {
 
 .scrollBarCO::-webkit-scrollbar {
   display: none;
-}
-
-/* Owl Carousel */
-.itemproduct:hover {
-  border: 2px solid #bb6c54; /* Use the primary color or any color you want */
 }
